# tp2-cpp

crtp-clonable/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  crtp-clonable  main.cpp
crtp-clonable/include/: crtp-clonable.hpp
zero-containers/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.cpp  zero-containers
zero-containers/include/: zero-containers.hpp
